--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Ramon Goose Trio</title>
 </head>
 <body>
-    Ramon Goose Trio Website coming soon! 
+   <h1 id="title">Ramon Goose Trio</h1>
+   <div><img src="assets/RamonGoose.jpg" id="main-pic" alt=""></div>
 </body>
 </html>
