--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Ramon Goose Trio</title>
 </head>
 <body>
+    <nav>
+
+  
+        <!--Collapsable Menu-->
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#home">About</a></li>
+            <li><a href="#home">Gigs</a></li>
+            <li><a href="#home">Music</a></li>
+            <li><a href="#home">Video</a></li>
+            <li><a href="#home">Contact</a></li>
+
+    
+        </ul>
+    </nav>
    <h1 id="title">Ramon Goose Trio</h1>
    <div><img src="assets/RamonGoose.jpg" id="main-pic" alt=""></div>
 </body>
