--- a/gigs.html
+++ b/gigs.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <nav>
+s
   
         <!--Collapsable Menu-->
         <ul>
@@ -19,7 +20,14 @@
             <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
-   <h1 id="title">Ramon Goose Trio</h1>
-   <div><img src="assets/RamonGoose.jpg" id="main-pic" alt=""></div>
+
+    <div>
+
+        <ul>
+            <li>3 Feb 2024 - Red Lion, Stevenage, UK</li>
+            <li>24 August 2024 - Worldwide Music Festival, UK</li>
+        </ul>
+
+    </div>
 </body>
 </html>
