--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <nav>
+s
   
         <!--Collapsable Menu-->
         <ul>
@@ -18,8 +19,9 @@
             <li><a href="/video.html">Video</a></li>
             <li><a href="/contact.html">Contact</a></li>
         </ul>
-    </nav>
-   <h1 id="title">Ramon Goose Trio</h1>
-   <div><img src="assets/RamonGoose.jpg" id="main-pic" alt=""></div>
+        </nav>
+        <div>
+            <h3></h3>
+        </div>
 </body>
 </html>
