--- a/music.html
+++ b/music.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-  
+
         <!--Collapsable Menu-->
         <ul>
             <li><a href="/index.html">Home</a></li>
@@ -19,7 +19,14 @@
             <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
-   <h1 id="title">Ramon Goose Trio</h1>
-   <div><img src="assets/RamonGoose.jpg" id="main-pic" alt=""></div>
+
+ <div>
+
+<P>To purchase "The Long Road To Tiznit" <a href="https://worldmusic.net/products/long-road-to-tiznit">click here</a>
+</P>
+    <img src="/assets/photos/RamonGoose.jpeg" alt="" width="640s">
+
+ </div>
+
 </body>
 </html>
