--- a/video.html
+++ b/video.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <nav>
+s
   
         <!--Collapsable Menu-->
         <ul>
@@ -19,7 +20,12 @@
             <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
-   <h1 id="title">Ramon Goose Trio</h1>
-   <div><img src="assets/RamonGoose.jpg" id="main-pic" alt=""></div>
+    <br>
+    <br>
+    
+
+    <div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/RaeJXYwSgoI?si=hPICnxgOmROIqHli" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
 </body>
 </html>
