--- a/music.html
+++ b/music.html
@@ -11,12 +11,12 @@
 
         <!--Collapsable Menu-->
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/gigs.html">Gigs</a></li>
-            <li><a href="/music.html">Music</a></li>
-            <li><a href="/video.html">Video</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="rgoosetrio/index.html">Home</a></li>
+            <li><a href="rgoosetrio/about.html">About</a></li>
+            <li><a href="rgoosetrio/gigs.html">Gigs</a></li>
+            <li><a href="rgoosetrio/music.html">Music</a></li>
+            <li><a href="rgoosetrio/video.html">Video</a></li>
+            <li><a href="rgoosetrio/contact.html">Contact</a></li>
         </ul>
     </nav>
 
