--- a/video.html
+++ b/video.html
@@ -12,17 +12,17 @@ s
   
         <!--Collapsable Menu-->
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/gigs.html">Gigs</a></li>
-            <li><a href="/music.html">Music</a></li>
-            <li><a href="/video.html">Video</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="rgoosetrio/index.html">Home</a></li>
+            <li><a href="rgoosetrio/about.html">About</a></li>
+            <li><a href="rgoosetrio/gigs.html">Gigs</a></li>
+            <li><a href="rgoosetrio/music.html">Music</a></li>
+            <li><a href="rgoosetrio/video.html">Video</a></li>
+            <li><a href="rgoosetrio/contact.html">Contact</a></li>
         </ul>
     </nav>
     <br>
     <br>
-    
+
 
     <div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/RaeJXYwSgoI?si=hPICnxgOmROIqHli" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
