--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!--Collapsable Menu-->
         <ul>
             <li><a href="/index.html">Home</a></li>
-            <li><a href="/about.html">About</a></li>
+            <li><a href="./about.html">About</a></li>
             <li><a href="/gigs.html">Gigs</a></li>
             <li><a href="/music.html">Music</a></li>
             <li><a href="/video.html">Video</a></li>
