--- a/music.html
+++ b/music.html
@@ -11,18 +11,18 @@
 
         <!--Collapsable Menu-->
         <ul>
-            <li><a href="rgoosetrio/index.html">Home</a></li>
-            <li><a href="rgoosetrio/about.html">About</a></li>
-            <li><a href="rgoosetrio/gigs.html">Gigs</a></li>
-            <li><a href="rgoosetrio/music.html">Music</a></li>
-            <li><a href="rgoosetrio/video.html">Video</a></li>
-            <li><a href="rgoosetrio/contact.html">Contact</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./gigs.html">Gigs</a></li>
+            <li><a href="./music.html">Music</a></li>
+            <li><a href="./video.html">Video</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>
 
  <div>
 
-<P>To purchase "The Long Road To Tiznit" <a href="https://worldmusic.net/products/long-road-to-tiznit">click here</a>
+<P class="main-class">To purchase "The Long Road To Tiznit" <a href="https://worldmusic.net/products/long-road-to-tiznit">click here</a>
 </P>
     <img src="/assets/photos/RamonGoose.jpeg" alt="" width="640s">
 
