--- a/gigs.html
+++ b/gigs.html
@@ -12,18 +12,18 @@ s
   
         <!--Collapsable Menu-->
         <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./gigs.html">Gigs</a></li>
-            <li><a href="./music.html">Music</a></li>
-            <li><a href="./video.html">Video</a></li>
-            <li><a href="./contact.html">Contact</a></li>
+            <li><a href="rgoosetrio/index.html">Home</a></li>
+            <li><a href="rgoosetrio/about.html">About</a></li>
+            <li><a href="rgoosetrio/gigs.html">Gigs</a></li>
+            <li><a href="rgoosetrio/music.html">Music</a></li>
+            <li><a href="rgoosetrio/video.html">Video</a></li>
+            <li><a href="rgoosetrio/contact.html">Contact</a></li>
         </ul>
     </nav>
 
     <div>
 
-        <ul id="gigs">
+        <ul class="gigs">
             <li>3 Feb 2024 - Red Lion, Stevenage, UK</li>
             <li>24 August 2024 - Worldwide Music Festival, UK</li>
         </ul>
