--- a/video.html
+++ b/video.html
@@ -24,8 +24,22 @@ s
     <br>
 
 
-    <div>
+    <div class="video-class">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/RaeJXYwSgoI?si=hPICnxgOmROIqHli" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
+    <br>
+    <div class="video-class">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/zh7LgqLDyBQ?si=L_RJPKSyeUoVTenD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+    <br>
+    <div class="video-class">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/wtp1Ou7xuDs?si=cBVcA6M08bvdA5PH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+    <br>
+    <div class="video-class">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/iUONJ_tBEoA?si=D0PcRnBw5sisSl2y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+
+
 </body>
 </html>
