--- a/about.html
+++ b/about.html
@@ -19,12 +19,13 @@
             <li><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>
-   <h1>bio</h1>
+   <h1>Ramon Goose Trio Bio</h1>
 
-<div>
-    <img src="" alt="Ramon">
-    <img src="" alt="Akos">
-    <img src="" alt="Giampaolo">
+<div class="row">
+    <div class="column"><img class="photo" src="./assets/RamonGoose3.jpg" alt="Ramon"></div>
+    <div class="column"><img class="photo" src="./assets/photos/WhatsApp Image 2023-12-07 at 20.11.52.jpeg" alt="Akos"></div>
+    <div class="column"><img class="photo" src="./assets/photos/WhatsApp Image 2023-12-07 at 17.20.09.jpeg" alt="Giampaolo"></div>
+
  </body>
 </div>
 
