--- a/music.html
+++ b/music.html
@@ -22,7 +22,7 @@
 
  <div>
 
-<P class="main-class">To purchase "The Long Road To Tiznit" (World Music Network Records) <a href="https://worldmusic.net/products/long-road-to-tiznit">click here</a>
+<P class="main-class">To purchase "The Long Road To Tiznit" (Riverboat Records) <a href="https://worldmusic.net/products/long-road-to-tiznit">click here</a>
 </P>
     <img src="/assets/photos/RamonGoose.jpeg" alt="" width="640s">
 
