--- a/index.html
+++ b/index.html
@@ -22,4 +22,6 @@
    <h1 id="title">Ramon Goose Trio</h1>
    <div><img src="assets/RamonGoose.jpg" id="main-pic" alt=""></div>
 </body>
+
+<footer>copyright 2024 james.wpdesign</footer>
 </html>
