--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">null</a>
                 </li>
               </ul>
             </div>
