--- a/index.html
+++ b/index.html
@@ -10,15 +10,7 @@
 <body>
     <nav>
   
-        <!--Collapsable Menu-->
-        <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./gigs.html">Gigs</a></li>
-            <li><a href="./music.html">Music</a></li>
-            <li><a href="./video.html">Video</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-        </ul>
+        <!-- Nav Bar s-->
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">Navbar</a>
@@ -28,22 +20,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
+                  <a class="nav-link" href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
+                  <a class="nav-link" href="./gigs.html">Gigs</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
+                  <a class="nav-link" href="./music.html">Music</a>
                 </li>
                 <li class="nav-item">
-                   <a class="nav-link" href="#">Pricing</a>
+                   <a class="nav-link" href="./video.html">Video</a>
                 </li>
                 <li class="nav-item">
-                   <a class="nav-link" href="#">Pricing</a>
+                   <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
 
                 <li class="nav-item">
