--- a/video.html
+++ b/video.html
@@ -8,17 +8,46 @@
 </head>
 <body>
     <nav>
-s
+
   
-        <!--Collapsable Menu-->
-        <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="./gigs.html">Gigs</a></li>
-            <li><a href="./music.html">Music</a></li>
-            <li><a href="./video.html">Video</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-        </ul>
+        <!-- Nav Bar -->
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Menu</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./about.html">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./gigs.html">Gigs</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./music.html">Music</a>
+                </li>
+                <li class="nav-item">
+                   <a class="nav-link" href="./video.html">Video</a>
+                </li>
+                <li class="nav-item">
+                   <a class="nav-link" href="./contact.html">Store</a>
+                </li>
+
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"> Guitarist Corner</a>
+                </li>
+
+                <li class="nav-item">
+                  <a class="nav-link" href="./contact.html">Contact</a>
+               </li>
+              </ul>
+              
+            </div>
     </nav>
     <br>
     <br>
