--- a/about.html
+++ b/about.html
@@ -53,11 +53,38 @@
 
    <h1>Ramon Goose Trio Bio</h1>
 
-<div class="row">
-    <div class="column"><img class="photo" src="./assets/RamonGoose3.jpg" alt="Ramon"></div>
-    <div class="column"><img class="photo" src="./assets/photos/WhatsApp Image 2023-12-07 at 20.11.52.jpeg" alt="Akos"></div>
-    <div class="column"><img class="photo" src="./assets/photos/WhatsApp Image 2023-12-07 at 17.20.09.jpeg" alt="Giampaolo"></div>
-
+   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-75 mx-auto" src="/assets/RamonGoose.jpg" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-75 mx-auto" src="/assets/photos/WhatsApp Image 2023-12-07 at 17.18.18.jpeg" alt="Fouth slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-75 mx-auto" src="/assets/photos/WhatsApp Image 2023-12-07 at 20.11.52.jpeg" alt="Fifth slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-75 mx-auto" src="/assets/Ramongoose2.jpg" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-75 mx-auto" src="/assets/RamonGoose3.jpg" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
  </body>
 </div>
 
