--- a/about.html
+++ b/about.html
@@ -61,19 +61,19 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-75 mx-auto" src="/assets/RamonGoose.jpg" alt="First slide">
+        <img class="d-block w-75 mx-auto" src="./assets/RamonGoose.jpg" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-75 mx-auto" src="/assets/photos/WhatsApp Image 2023-12-07 at 17.18.18.jpeg" alt="Fouth slide">
+        <img class="d-block w-75 mx-auto" src="./assets/photos/WhatsApp Image 2023-12-07 at 17.18.18.jpeg" alt="Fouth slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-75 mx-auto" src="/assets/photos/WhatsApp Image 2023-12-07 at 20.11.52.jpeg" alt="Fifth slide">
+        <img class="d-block w-75 mx-auto" src="./assets/photos/WhatsApp Image 2023-12-07 at 20.11.52.jpeg" alt="Fifth slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-75 mx-auto" src="/assets/Ramongoose2.jpg" alt="Second slide">
+        <img class="d-block w-75 mx-auto" src="./assets/Ramongoose2.jpg" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-75 mx-auto" src="/assets/RamonGoose3.jpg" alt="Third slide">
+        <img class="d-block w-75 mx-auto" src="./assets/RamonGoose3.jpg" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
