--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
             </div>
     </nav>
 
-   <h1>Ramon Goose Trio Bio</h1>
+   <h1>Ramon Goose Bio</h1>
 
    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
