--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="./guitarists-corner.html" tabindex="-1" aria-disabled="true"> Guitarist Corner</a>
+                  <a class="nav-link" href="./guitarists-corner.html" tabindex="-1" aria-disabled="true"> Guitarist Corner</a>
                 </li>
 
                 <li class="nav-item">
