--- a/video.html
+++ b/video.html
@@ -12,12 +12,11 @@
 </head>
 <body>
     <nav>
-
   
         <!-- Nav Bar -->
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Menu</a>
+            <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -43,7 +42,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"> Guitarist Corner</a>
+                  <a class="nav-link" href="./guitarists-corner.html" tabindex="-1" aria-disabled="true"> Guitarist Corner</a>
                 </li>
 
                 <li class="nav-item">
@@ -53,6 +52,7 @@
               
             </div>
     </nav>
+
     <br>
     <br>
 
