--- a/gigs.html
+++ b/gigs.html
@@ -52,11 +52,11 @@
               
             </div>
     </nav>
-
+</br>
 
     <div>
 
-        <ul class="gigs">
+        <ul class="gigs" style="text-align: center;"">
             <li>4 Feb 2024 - Red Lion, Stevenage, UK</li>
             <li>24 August 2024 - Worldwide Music Festival, UK</li>
         </ul>
