--- a/music.html
+++ b/music.html
@@ -56,9 +56,9 @@
 
  <div>
 
-<P class="main-class">To purchase "The Long Road To Tiznit" (Riverboat Records) <a href="https://worldmusic.net/products/long-road-to-tiznit">click here</a>
+<P class="main-class" style="text-align:center">To purchase "The Long Road To Tiznit" (Riverboat Records) <a href="https://worldmusic.net/products/long-road-to-tiznit">click here</a>
 </P>
-    <img src="./assets/photos/RamonGoose.jpeg" alt="" width="640s">
+    <img src="./assets/photos/RamonGoose.jpeg" class="center" alt="" width="640s">
 
  </div>
 
