links in guitarist corner

--- a/guitarists-corner.html
+++ b/guitarists-corner.html
@@ -66,7 +66,7 @@
           <div class="col-md-6 no-gutter">
             <br>
             <p class="p1">
-           My number one: a Daniels burst <a href="https://danielsguitars.co.uk/">Click here to visit Daniels Guitars</a>
+           My number one: a Daniels burst <a href="https://danielsguitars.co.uk/">Click here to visit Daniels Guitars, this guitar and several others of mine, feature Alan Dingwall Pickups <a href="https://www.spiritpickups.com/">visit Alans website here</a>
             </p>
           </div>
         </div>
