--- a/gigs.html
+++ b/gigs.html
@@ -58,6 +58,10 @@
 
         <ul class="gigs" style="text-align: center;"">
             <li>4 Feb 2024 - Red Lion, Stevenage, UK</li>
+            <li>29 April 2024 - L'inexplosible Orléans, FRANCE</li>
+            <li>21st June 2024 - with Najma Akhtar Band, at Zedel's, </br>
+              Crazy Coqs venue, Piccadilly Circus. West End. London. UK </li>
+              <li>23-28 June 2024 Italian Tour (details to follow)</li>
             <li>24 August 2024 - Worldwide Music Festival, UK</li>
         </ul>
 
