--- a/music.html
+++ b/music.html
@@ -53,14 +53,63 @@
             </div>
     </nav>
 
+    
+<br><br>
+   <container class="container">
+   
 
- <div>
+ <div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Long Road To Tiznit</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <script src="https://www.paypal.com/sdk/js?client-id=BAADvhVAazUURN1y_S-rXHQepHgn8VP3tCiZI8VHjCTK1EVagd14VU0S8nB1Jy4iGsIhaYzeAPY7fXQYGM&components=hosted-buttons&disable-funding=venmo&currency=GBP"></script>
+    <div id="paypal-container-68QQMBM6QBES4"></div>
+    <script>
+      paypal.HostedButtons({
+        hostedButtonId: "68QQMBM6QBES4",
+      }).render("#paypal-container-68QQMBM6QBES4")
+    </script>
+    
+  </div>
+</div>
 
-<P class="main-class" style="text-align:center">To purchase "The Long Road To Tiznit" (Riverboat Records) <a href="https://worldmusic.net/products/long-road-to-tiznit">click here</a>
-</P>
-    <img src="./assets/photos/RamonGoose.jpeg" class="center" alt="" width="640s">
+<div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Blues & Spirituals</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <script src="https://www.paypal.com/sdk/js?client-id=BAADvhVAazUURN1y_S-rXHQepHgn8VP3tCiZI8VHjCTK1EVagd14VU0S8nB1Jy4iGsIhaYzeAPY7fXQYGM&components=hosted-buttons&disable-funding=venmo&currency=GBP"></script>
+    <div id="paypal-container-KDFMBCXZR7HRU"></div>
+    <script>
+      paypal.HostedButtons({
+        hostedButtonId: "KDFMBCXZR7HRU",
+      }).render("#paypal-container-KDFMBCXZR7HRU")
+    </script>
 
- </div>
+  </div>
+</div>
+
+
+<div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Journey Into The Blues</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+
+
+    <script src="https://www.paypal.com/sdk/js?client-id=BAADvhVAazUURN1y_S-rXHQepHgn8VP3tCiZI8VHjCTK1EVagd14VU0S8nB1Jy4iGsIhaYzeAPY7fXQYGM&components=hosted-buttons&disable-funding=venmo&currency=GBP"></script>
+<div id="paypal-container-6M49C2B67LLQW"></div>
+<script>
+  paypal.HostedButtons({
+    hostedButtonId: "6M49C2B67LLQW",
+  }).render("#paypal-container-6M49C2B67LLQW")
+</script>
+
+  </div>
+</div>
+</container>
+
 
 </body>
 </html>
