--- a/music.html
+++ b/music.html
@@ -55,7 +55,7 @@
 
     
 <br><br>
-   <container class="container">
+   <div class="container">
    
 
  <div class="card" style="width: 18rem;">
@@ -108,7 +108,7 @@
 
   </div>
 </div>
-</container>
+</div>
 
 
 </body>
