--- a/gigs.html
+++ b/gigs.html
@@ -57,12 +57,10 @@
     <div>
 
         <ul class="gigs" style="text-align: center;"">
-            <li>4 Feb 2024 - Red Lion, Stevenage, UK</li>
-            <li>29 April 2024 - L'inexplosible Orléans, FRANCE</li>
-            <li>21st June 2024 - with Najma Akhtar Band, at Zedel's, </br>
-              Crazy Coqs venue, Piccadilly Circus. West End. London. UK </li>
-              <li>23-28 June 2024 Italian Tour (details to follow)</li>
-            <li>24 August 2024 - Worldwide Music Festival, UK</li>
+            <li>23 Jan 2026 - Jam In A Jar, London UK</li>
+            <li>Feb 2026 - Red Lion Stevenage</li>
+            <li>26 Feb Hot Box, Chelmsford</li>
+            <li>21 March, Casa Trova, Santiago De Cuba, Cuba</li>
         </ul>
 
     </div>
