--- a/gigs.html
+++ b/gigs.html
@@ -58,9 +58,9 @@
 
         <ul class="gigs" style="text-align: center;"">
             <li>23 Jan 2026 - Jam In A Jar, London UK</li>
-            <li>Feb 2026 - Red Lion Stevenage</li>
-            <li>26 Feb Hot Box, Chelmsford</li>
-            <li>21 March, Casa Trova, Santiago De Cuba, Cuba</li>
+            <li>Feb 2026 - Red Lion Stevenage, UK</li>
+            <li>26 Feb 2026 Hot Box, Chelmsford, UK</li>
+            <li>21 Mar 2026, Casa Trova, Santiago De Cuba, Cuba</li>
         </ul>
 
     </div>
